--- a/website.css
+++ b/website.css
@@ -6,13 +6,13 @@ h1 {
   color: green;
   text-align: center;
   font-family: cursive;
-  font-size: 30pt;
+  font-size: 50pt;
 }
 
 h3 {
   color: white;
   text-align: center;
-  font-family: courier;
+  font-family: cursive;
 }
 
 p {
