--- a/website.css
+++ b/website.css
@@ -3,9 +3,9 @@ body {
 }
 
 h1 {
-  color: green;
+  color: black;
   text-align: center;
-  font-family: cursive;
+  font-family: bold;
   font-size: 50pt;
 }
 
