--- a/website.css
+++ b/website.css
@@ -1,5 +1,5 @@
 body {
-  backgound-image: url('eye.jpg');
+  backgound-image: url('https://github.com/OoFALLENoO/OoFALLENoO.github.io/blob/main/Eye.jpg');
   background-color: blue;
 }
 
